[gd_scene load_steps=3 format=3 uid="uid://bri7a10em12dj"]

[ext_resource type="Script" path="res://items/ItemLevel.gd" id="1_awvn7"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_h1eoe"]
radius = 32.0
height = 64.0

[node name="ItemLevel" type="Node2D" groups=["draggable"]]
z_index = 4
script = ExtResource("1_awvn7")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_h1eoe")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
